@@ -17,7 +17,7 @@ use IO::File;
 use XSLoader;
 
 our @EXPORT    = qw();
-our @EXPORT_OK = qw(load);
+our @EXPORT_OK = qw(load getloadavg proc_loadavg uptime);
 
 our $VERSION = '0.22';
 
@@ -39,15 +39,81 @@ of a machine.
 This method returns the load average for 1 minute, 5 minutes and 15
 minutes as an array.
 
-On Linux, FreeBSD and OpenBSD systems, it will make a call to C<getloadavg>.
+On Linux, Solaris, FreeBSD, NetBSD and OpenBSD systems, it will make a
+call to L</getloadavg>.
 
-If F</proc/loadavg> is available, it will attempt to parse the file.
+If F</proc/loadavg> is available on non-Cygwin systems, it
+will call L</proc_loadavg>.
 
 Otherwise, it will attempt to parse the output of C<uptime>.
 
 On error, it will return an array of C<undef> values.
 
+If you are writing code to work on multiple systems, you should use
+this function.  But if your code is intended for specific systems,
+then you should use the appropriate function.
+
+=export getloadavg
+
+This is a wrapper around the system call to C<getloadavg>.
+
+If this call is unavailable, or it is fails, it will return C<undef>.
+
+Added in v0.22.
+
+=export proc_loadavg
+
+If F</proc/loadavg> is available, it will be used.
+
+If the data cannot be parsed, it will return C<undef>.
+
+Added in v0.22.
+
+=head2 uptime
+
+Parse the output of uptime.
+
+If the output cannot be parsed, it will return C<undef>.
+
+Added in v0.22.
+
 =cut
+
+sub proc_loadavg {
+
+    if ( -r '/proc/loadavg' ) {
+
+        my $fh = IO::File->new( '/proc/loadavg', 'r' );
+        if ( defined $fh ) {
+            my $line = <$fh>;
+            $fh->close();
+            if ( $line =~ /^(\d+\.\d+)\s+(\d+\.\d+)\s+(\d+\.\d+)/ ) {
+                return ( $1, $2, $3 );
+            }
+        }
+    }
+
+    return undef;    ## no critic (ProhibitExplicitReturnUndef)
+}
+
+sub uptime {
+    local %ENV = %ENV;
+    $ENV{'LC_NUMERIC'} =
+        'POSIX';    # ensure that decimal separator is a dot
+
+    my $fh = IO::File->new('/usr/bin/uptime|');
+    if ( defined $fh ) {
+        my $line = <$fh>;
+        $fh->close();
+        if ( $line =~
+             /(\d+\.\d+)\s*,\s+(\d+\.\d+)\s*,\s+(\d+\.\d+)\s*$/ )
+        {
+            return ( $1, $2, $3 );
+        }
+    }
+    return undef; ## no critic (ProhibitExplicitReturnUndef)
+
+}
 
 sub BEGIN {
 
@@ -55,51 +121,16 @@ sub BEGIN {
     my $os   = lc $^O;
 
     if ( $os =~ /^(darwin|(free|net|open)bsd|linux|solaris|sunos)$/ ) {
-
         no strict 'refs'; ## no critic (ProhibitNoStrict)
-
-        *{"${this}::load"} = \&_getbsdload;
-
+        *{"${this}::load"} = \&getloadavg;
     }
     elsif ( -r '/proc/loadavg' && $os ne 'cygwin' ) {
-
         no strict 'refs'; ## no critic (ProhibitNoStrict)
-
-        *{"${this}::load"} = sub {
-            my $fh = IO::File->new( '/proc/loadavg', 'r' );
-            if ( defined $fh ) {
-                my $line = <$fh>;
-                $fh->close();
-                if ( $line =~ /^(\d+\.\d+)\s+(\d+\.\d+)\s+(\d+\.\d+)/ ) {
-                    return ( $1, $2, $3 );
-                }
-            }
-            return undef; ## no critic (ProhibitExplicitReturnUndef)
-        };
-
+        *{"${this}::load"} = \&proc_loadavg;
     }
     else {
-
         no strict 'refs'; ## no critic (ProhibitNoStrict)
-
-        *{"${this}::load"} = sub {
-
-            local %ENV = %ENV;
-            $ENV{'LC_NUMERIC'} =
-              'POSIX';    # ensure that decimal separator is a dot
-
-            my $fh = IO::File->new('/usr/bin/uptime|');
-            if ( defined $fh ) {
-                my $line = <$fh>;
-                $fh->close();
-                if ( $line =~
-                    /(\d+\.\d+)\s*,\s+(\d+\.\d+)\s*,\s+(\d+\.\d+)\s*$/ )
-                {
-                    return ( $1, $2, $3 );
-                }
-            }
-            return undef; ## no critic (ProhibitExplicitReturnUndef)
-        };
+        *{"${this}::load"} = \&uptime;
     }
 
 }
