@@ -1,6 +1,11 @@
 Revision history for Perl extension {{$dist->name}}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Split getloadavg, proc_loadavg and uptime into separate functions.
+
+  [Incompatabilities]
+  - Renamed _getbsdload to getloadavg.
 
 0.21      2020-03-25 13:03:11+00:00 Europe/London
   [Bug Fixes]
